fixed blurry svg animations on mobile

--- a/style.css
+++ b/style.css
@@ -600,6 +600,9 @@ input[type=text]:focus {
     }
 }
 @media screen and (max-width: 770px) {
+    body{
+      height: unset;
+    }
     .container{
       margin: 10px 5vw;
     }
@@ -643,7 +646,8 @@ input[type=text]:focus {
     }
     #submit-btn{
       font-size: 23px;
-      top: 21px;
+      top: 22px;
+      padding-left: 2vw;
     }
     .loc-toggle-container{
       display: -webkit-box;
@@ -742,7 +746,7 @@ input[type=text]:focus {
               border-radius: 0;
     }
     .info-container{
-      border-top: 15px solid #8db8b1;
+      border-top: 15px solid #6eb5a9;
     }
     .temperature{
       margin-top: 120px;
